Add in an overview of the configurations that are available by default.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/branches/1.0@356608 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/welcome/src/webapp/main.css
+++ b/applications/welcome/src/webapp/main.css
@@ -27,6 +27,12 @@ td
 	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
 }
 
+th
+{
+	font-size: 12px;
+	font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
+}
+
 a:link, a:visited
 {
 	color: #204486;
