Fixed ServletLogger so that Velocity won't attempt to create a velocity.log file in current directory. Also fixed Velocity errors being caused by non-existent 'getReturnType()' method (even though html was commented out...) I enabled MBean Operations while I was at it.
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@358088 13f79535-47bb-0310-9956-ffa450edef68

--- a/applications/jmxdebug/src/webapp/mbeaninfo.vm
+++ b/applications/jmxdebug/src/webapp/mbeaninfo.vm
@@ -25,7 +25,7 @@
 </tr>
 </table>
 
-<h3>Attributes</h3>
+<h3>MBean Attributes</h3>
 
 <table>
 
@@ -47,7 +47,6 @@
 #end
 </table>
 
-<!--
 <h3>MBean Operations</h3>
 
 
@@ -55,15 +54,16 @@
 
 <tr>
   <th>Name</th>
-  <th>Return Type</th>
+  <th>MethodName</th>
+  <th>Parameters</th>
 </tr>
 
 #foreach($i in $beanInfo.getOperationInfo())
 <tr>
   <td>$i.getName()</td>
-  <td>$i.getReturnType()</td>
+  <td>$i.getMethodName()</td>
+  <td>$i.getParameterList()</td>
 </tr>
 #end
 </table>
--->
 
